--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -13,7 +13,7 @@
 
 
     html {
-          background: #262C33 url("../images/background.png");  
+          background: #262C33 url("../images/background.jpg");  
         background-repeat:no-repeat;
        background-attachment: fixed; background-size: 100%;}
 
